# ORMPI

./: CMakeLists.txt  README.md
config/: config.h
src/: ORMPI.cpp
src/cpp/: KinematicControl.cpp  RRT.cpp  node.cpp
src/include/: KinematicControl.h  RRT.h  node.h
